[project]
name = "mcp-house-search"
version = "0.1.0"
description = "房屋意图识别 MCP Server — 从自然语言中识别房屋，混合搜索(向量+BM25)和精确查询"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.27.2",
    "pymilvus>=3.0.0",
    "requests>=2.34.2",
    "xlrd>=2.0.2",
]

[project.scripts]
mcp-house-search = "mcp_house_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
